test_suite/tests/ui/fail_with_invalid_codec_attrs.stderr
error: Invalid attribute on field, only `#[codec(skip)]`, `#[codec(compact)]` and `#[codec(encoded_as = "$EncodeAs")]` are accepted.
 --> tests/ui/fail_with_invalid_codec_attrs.rs:8:7
  |
8 |     #[codec(skip, compact)]
  |       ^^^^^

error: Invalid attribute on field, only `#[codec(skip)]`, `#[codec(compact)]` and `#[codec(encoded_as = "$EncodeAs")]` are accepted.
  --> tests/ui/fail_with_invalid_codec_attrs.rs:14:19
   |
14 |     Thing(#[codec(index = 3)] u32),
   |                   ^^^^^

error: Invalid attribute on variant, only `#[codec(skip)]` and `#[codec(index = $u8)]` are accepted.
  --> tests/ui/fail_with_invalid_codec_attrs.rs:19:13
   |
19 |     #[codec(index = a)]
   |             ^^^^^

error: Invalid attribute on variant, only `#[codec(skip)]` and `#[codec(index = $u8)]` are accepted.
  --> tests/ui/fail_with_invalid_codec_attrs.rs:25:7
   |
25 |     #[codec(encode_as = u8, compact)]
   |       ^^^^^
